refactor: rename Workspace to Target (#1297)
BREAKING CHANGE:
- renamed all occurrences of Workspace to Target
- renamed all relevant functions, methods and commands
- changed the provider interface to use Target instead of Workspace
