# pkg/api/docs/swagger.json
@@ -1506,6 +1506,68 @@
                 }
             }
         },
+        "/target": {
+            "get": {
+                "description": "List targets",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "target"
+                ],
+                "summary": "List targets",
+                "operationId": "ListTargets",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "Verbose",
+                        "name": "verbose",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/TargetDTO"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a target",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "target"
+                ],
+                "summary": "Create a target",
+                "operationId": "CreateTarget",
+                "parameters": [
+                    {
+                        "description": "Create target",
+                        "name": "target",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateTargetDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Target"
+                        }
+                    }
+                }
+            }
+        },
         "/target-config": {
             "get": {
                 "description": "List target configs",
@@ -1602,84 +1664,22 @@
                 }
             }
         },
-        "/workspace": {
+        "/target/{targetId}": {
             "get": {
-                "description": "List workspaces",
+                "description": "Get target info",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "workspace"
+                    "target"
                 ],
-                "summary": "List workspaces",
-                "operationId": "ListWorkspaces",
-                "parameters": [
-                    {
-                        "type": "boolean",
-                        "description": "Verbose",
-                        "name": "verbose",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/WorkspaceDTO"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a workspace",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "workspace"
-                ],
-                "summary": "Create a workspace",
-                "operationId": "CreateWorkspace",
-                "parameters": [
-                    {
-                        "description": "Create workspace",
-                        "name": "workspace",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/CreateWorkspaceDTO"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Workspace"
-                        }
-                    }
-                }
-            }
-        },
-        "/workspace/{workspaceId}": {
-            "get": {
-                "description": "Get workspace info",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "workspace"
-                ],
-                "summary": "Get workspace info",
-                "operationId": "GetWorkspace",
+                "summary": "Get target info",
+                "operationId": "GetTarget",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Workspace ID or Name",
-                        "name": "workspaceId",
+                        "description": "Target ID or Name",
+                        "name": "targetId",
                         "in": "path",
                         "required": true
                     },
@@ -1694,23 +1694,23 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/WorkspaceDTO"
+                            "$ref": "#/definitions/TargetDTO"
                         }
                     }
                 }
             },
             "delete": {
-                "description": "Remove workspace",
+                "description": "Remove target",
                 "tags": [
-                    "workspace"
+                    "target"
                 ],
-                "summary": "Remove workspace",
-                "operationId": "RemoveWorkspace",
+                "summary": "Remove target",
+                "operationId": "RemoveTarget",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Workspace ID",
-                        "name": "workspaceId",
+                        "description": "Target ID",
+                        "name": "targetId",
                         "in": "path",
                         "required": true
                     },
@@ -1728,19 +1728,19 @@
                 }
             }
         },
-        "/workspace/{workspaceId}/start": {
+        "/target/{targetId}/start": {
             "post": {
-                "description": "Start workspace",
+                "description": "Start target",
                 "tags": [
-                    "workspace"
+                    "target"
                 ],
-                "summary": "Start workspace",
-                "operationId": "StartWorkspace",
+                "summary": "Start target",
+                "operationId": "StartTarget",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Workspace ID or Name",
-                        "name": "workspaceId",
+                        "description": "Target ID or Name",
+                        "name": "targetId",
                         "in": "path",
                         "required": true
                     }
@@ -1752,19 +1752,19 @@
                 }
             }
         },
-        "/workspace/{workspaceId}/stop": {
+        "/target/{targetId}/stop": {
             "post": {
-                "description": "Stop workspace",
+                "description": "Stop target",
                 "tags": [
-                    "workspace"
+                    "target"
                 ],
-                "summary": "Stop workspace",
-                "operationId": "StopWorkspace",
+                "summary": "Stop target",
+                "operationId": "StopTarget",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Workspace ID or Name",
-                        "name": "workspaceId",
+                        "description": "Target ID or Name",
+                        "name": "targetId",
                         "in": "path",
                         "required": true
                     }
@@ -1776,19 +1776,19 @@
                 }
             }
         },
-        "/workspace/{workspaceId}/{projectId}/start": {
+        "/target/{targetId}/{projectId}/start": {
             "post": {
                 "description": "Start project",
                 "tags": [
-                    "workspace"
+                    "target"
                 ],
                 "summary": "Start project",
                 "operationId": "StartProject",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Workspace ID or Name",
-                        "name": "workspaceId",
+                        "description": "Target ID or Name",
+                        "name": "targetId",
                         "in": "path",
                         "required": true
                     },
@@ -1807,19 +1807,19 @@
                 }
             }
         },
-        "/workspace/{workspaceId}/{projectId}/state": {
+        "/target/{targetId}/{projectId}/state": {
             "post": {
                 "description": "Set project state",
                 "tags": [
-                    "workspace"
+                    "target"
                 ],
                 "summary": "Set project state",
                 "operationId": "SetProjectState",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Workspace ID or Name",
-                        "name": "workspaceId",
+                        "description": "Target ID or Name",
+                        "name": "targetId",
                         "in": "path",
                         "required": true
                     },
@@ -1847,19 +1847,19 @@
                 }
             }
         },
-        "/workspace/{workspaceId}/{projectId}/stop": {
+        "/target/{targetId}/{projectId}/stop": {
             "post": {
                 "description": "Stop project",
                 "tags": [
-                    "workspace"
+                    "target"
                 ],
                 "summary": "Stop project",
                 "operationId": "StopProject",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Workspace ID or Name",
-                        "name": "workspaceId",
+                        "description": "Target ID or Name",
+                        "name": "targetId",
                         "in": "path",
                         "required": true
                     },
@@ -2171,7 +2171,7 @@
                 }
             }
         },
-        "CreateWorkspaceDTO": {
+        "CreateTargetDTO": {
             "type": "object",
             "required": [
                 "id",
@@ -2622,8 +2622,8 @@
                 "name",
                 "repository",
                 "targetConfig",
-                "user",
-                "workspaceId"
+                "targetId",
+                "user"
             ],
             "properties": {
                 "buildConfig": {
@@ -2653,10 +2653,10 @@
                 "targetConfig": {
                     "type": "string"
                 },
-                "user": {
+                "targetId": {
                     "type": "string"
                 },
-                "workspaceId": {
+                "user": {
                     "type": "string"
                 }
             }
@@ -2713,7 +2713,7 @@
                 "created",
                 "isRunning",
                 "name",
-                "workspaceId"
+                "targetId"
             ],
             "properties": {
                 "created": {
@@ -2728,7 +2728,7 @@
                 "providerMetadata": {
                     "type": "string"
                 },
-                "workspaceId": {
+                "targetId": {
                     "type": "string"
                 }
             }
@@ -2953,6 +2953,32 @@
                 "UpdatedButUnmerged"
             ]
         },
+        "Target": {
+            "type": "object",
+            "required": [
+                "id",
+                "name",
+                "projects",
+                "targetConfig"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "projects": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Project"
+                    }
+                },
+                "targetConfig": {
+                    "type": "string"
+                }
+            }
+        },
         "TargetConfig": {
             "type": "object",
             "required": [
@@ -3020,33 +3046,7 @@
                 }
             }
         },
-        "Workspace": {
-            "type": "object",
-            "required": [
-                "id",
-                "name",
-                "projects",
-                "targetConfig"
-            ],
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "projects": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/Project"
-                    }
-                },
-                "targetConfig": {
-                    "type": "string"
-                }
-            }
-        },
-        "WorkspaceDTO": {
+        "TargetDTO": {
             "type": "object",
             "required": [
                 "id",
@@ -3059,7 +3059,7 @@
                     "type": "string"
                 },
                 "info": {
-                    "$ref": "#/definitions/WorkspaceInfo"
+                    "$ref": "#/definitions/TargetInfo"
                 },
                 "name": {
                     "type": "string"
@@ -3075,7 +3075,7 @@
                 }
             }
         },
-        "WorkspaceInfo": {
+        "TargetInfo": {
             "type": "object",
             "required": [
                 "name",
@@ -3101,12 +3101,12 @@
             "enum": [
                 "client",
                 "project",
-                "workspace"
+                "target"
             ],
             "x-enum-varnames": [
                 "ApiKeyTypeClient",
                 "ApiKeyTypeProject",
-                "ApiKeyTypeWorkspace"
+                "ApiKeyTypeTarget"
             ]
         },
         "build.BuildState": {
